fix: lombok fix